--- a/examples/CogniChain.Examples.Azure/CogniChain.Examples.Azure.csproj
+++ b/examples/CogniChain.Examples.Azure/CogniChain.Examples.Azure.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.3.0-beta.1" />
     <PackageReference Include="Azure.Identity" Version="1.13.2" />
   </ItemGroup>
 
