--- a/examples/CogniChain.Examples.SemanticKernel/CogniChain.Examples.SemanticKernel.csproj
+++ b/examples/CogniChain.Examples.SemanticKernel/CogniChain.Examples.SemanticKernel.csproj
@@ -2,9 +2,6 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.70.0" />
+    <PackageReference Include="Microsoft.SemanticKernel" />
   </ItemGroup>
 
 </Project>
